--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "dayjs": "^1.11.13",
     "gcp-metadata": "^5.3.0",
     "graphql-ws": "^5.16.0",
+    "jsonwebtoken": "^9.0.2",
     "kerberos": "^2.2.1",
-    "mongodb": "^6.12.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.9.1",
     "next": "^15.1.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
