--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@mongodb-js/zstd": "^2.0.0",
     "@mui/icons-material": "^6.0.0",
-    "@mui/material": "^6.1.1",
+    "@mui/lab": "^6.0.0-beta.31",
+    "@mui/material": "^6.4.8",
     "@mui/styles": "^6.2.0",
     "@mui/x-date-pickers": "^7.18.0",
     "apollo-server-types": "^3.8.0",
@@ -27,12 +28,14 @@
     "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "kerberos": "^2.2.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.1",
     "next": "^15.1.2",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
-    "react-calendar": "^5.0.0",
+    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "snappy": "^7.2.2",
     "socks": "^2.8.3",
