--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
     "snappy": "^7.2.2",
     "socks": "^2.8.3",
     "zod": "^3.24.1"
