gestion de usuarios ayuda de matias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,11 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
-  },
+    "strictNullChecks": true,  
+  
+    "types": ["next-auth"]
+  
+},
   "include": [
     "next-env.d.ts",
     "**/*.ts",
