--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://bruno170396:N5B2hcW1svUaCbBY@clusterconsultorio1.hv9w
 NODE_ENV='development',
 NEXTAUTH_SECRET="IdHX3gQAVr0Ec4yeHjdPj7XgdmaOAL1h3gxONAQfbM4="
 NEXTAUTH_URL=http://localhost:3000
+RESEND_API_KEY=re_123456789abcdefg  
