--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_CONSULTORIO_API= "http://localhost:3006/graphql"
+NEXT_PUBLIC_CONSULTORIO_API= "https://consultorioback.onrender.com/graphql"
 MONGODB_URI="mongodb+srv://bruno170396:N5B2hcW1svUaCbBY@clusterconsultorio1.hv9wo2p.mongodb.net/consultorio"
 NODE_ENV='development',
 NEXTAUTH_SECRET="IdHX3gQAVr0Ec4yeHjdPj7XgdmaOAL1h3gxONAQfbM4="
