--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_CONSULTORIO_API= "https://consultorioback.onrender.com/graphql"
-MONGODB_URI="mongodb+srv://bruno170396:N5B2hcW1svUaCbBY@clusterconsultorio1.hv9wo2p.mongodb.net/consultorio"
+##MONGODB_URI="mongodb+srv://bruno170396:N5B2hcW1svUaCbBY@clusterconsultorio1.hv9wo2p.mongodb.net/consultorio"
 NODE_ENV='development',
 NEXTAUTH_SECRET="IdHX3gQAVr0Ec4yeHjdPj7XgdmaOAL1h3gxONAQfbM4="
 NEXTAUTH_URL=http://localhost:3000
 RESEND_API_KEY=re_123456789abcdefg  
+MONGODB_URI="mongodb+srv://bruno170396:N5B2hcW1svUaCbBY@clusterconsultorio1.hv9wo2p.mongodb.net/consultorio?retryWrites=true&w=majority&tls=true"
