--- a/package.json
+++ b/package.json
@@ -10,28 +10,26 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@auth/mongodb-adapter": "^3.7.4",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@mongodb-js/zstd": "^2.0.0",
-    "@mui/icons-material": "^6.0.0",
-    "@mui/lab": "^6.0.0-beta.31",
-    "@mui/material": "^6.4.8",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@mui/styles": "^6.2.0",
-    "@mui/x-date-pickers": "^7.18.0",
+    "@mui/x-date-pickers": "^8.22.0",
     "apollo-server-types": "^3.8.0",
     "aws4": "^1.13.2",
     "bcryptjs": "^2.4.3",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.19",
     "gcp-metadata": "^5.3.0",
     "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "kerberos": "^2.2.1",
-    "moment": "^2.30.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.1",
-    "next": "^15.1.2",
+    "next": "^16.0.10",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
@@ -44,9 +42,9 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^25.0.2",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "typescript": "5.9.3"
   }
 }
