--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,24 +16,26 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "strictNullChecks": true,  
-  
-    "types": ["next-auth"]
-  
-},
+    "strictNullChecks": true,
+    "types": [
+      "next-auth"
+    ]
+  },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "next.config.js", "pages/api/auth/[...nextauth].ts"  ],
+    ".next/types/**/*.ts",
+    "next.config.js",
+    "pages/api/auth/[...nextauth].ts"
+  ],
   "exclude": [
     "node_modules"
   ]
