actualización de componentes 2

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@mongodb-js/zstd": "^2.0.0",
-    "@mui/icons-material": "^7.3.6",
-    "@mui/material": "^7.3.6",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
     "@mui/styles": "^6.2.0",
+    "@mui/system": "^5.18.0",
     "@mui/x-date-pickers": "^8.22.0",
     "apollo-server-types": "^3.8.0",
     "aws4": "^1.13.2",
