--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -30,8 +30,9 @@
     "kerberos": "^2.2.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.1",
-    "next": "^16.0.10",
+    "next": "^14.2.5",
     "next-auth": "^4.24.11",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
